refactor: token이 존재하지 않을 경우 fcm 메시지 송신 요청을 하지 않도록 수정